--- a/package.json
+++ b/package.json
@@ -1,24 +1,40 @@
 {
   "name": "express-marketing-boilerplate",
-  "version": "0.0.9",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:dev": "nodemon ./bin/www"
+    "start:dev": "NODE_ENV=development nodemon ./bin/www",
+    "styles": "node-sass -w -r scss -o public/css",
+    "sync": "browser-sync start --files='./views','./public' --https --proxy=localhost:8080",
+    "build": "webpack --config webpack.config.js"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "cookie-parser": "~1.4.3",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "debug": "~2.6.9",
-    "dotenv": "^8.1.0",
+    "dotenv": "^8.2.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
-    "express-redis-cache": "^1.1.3",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "node-sass-middleware": "0.11.0"
+    "markdown-it": "^10.0.0",
+    "morgan": "~1.9.0"
   },
   "devDependencies": {
-    "nodemon": "^1.19.2"
+    "css-loader": "^3.4.2",
+    "jquery": "^3.4.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "nodemon": "^1.19.4",
+    "popper.js": "^1.16.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  },
+  "engines": {
+    "node": "~10.15"
   }
 }
